    * [HIVE-4265] - HCatalog branches need to move out of trunk/hcatalog/historical
    * [HIVE-4278] - HCat needs to get current Hive jars instead of pulling them from maven repo
    * [HIVE-4325] - Merge HCat NOTICE file with Hive NOTICE file
    * [HIVE-4326] - Clean up remaining items in hive/hcatalog/historical/trunk

** Bug
    * [HIVE-2264] - Hive server is SHUTTING DOWN when invalid queries beeing executed.
    * [HIVE-2332] - If all of the parameters of distinct functions are exists in group by columns, query fails in runtime
    * [HIVE-2689] - ObjectInspectorConverters cannot convert Void types to Array/Map/Struct types.
    * [HIVE-2723] - should throw  "Ambiguous column reference key"  Exception in particular join condition
    * [HIVE-2794] - Aggregations without grouping should return NULL when applied to partitioning column of a partitionless table
    * [HIVE-2820] - Invalid tag is used for MapJoinProcessor
    * [HIVE-2839] - Filters on outer join with mapjoin hint is not applied correctly
    * [HIVE-3084] - Hive CI failing due to script_broken_pipe1.q
    * [HIVE-3140] - Comment indenting is broken for "describe" in CLI
    * [HIVE-3179] - HBase Handler doesn't handle NULLs properly
    * [HIVE-3197] - Hive compile errors under Java 7 (JDBC 4.1)
    * [HIVE-3297] - change hive.auto.convert.join's default value to true
    * [HIVE-3300] - LOAD DATA INPATH fails if a hdfs file with same name is added to table
    * [HIVE-3308] - Mixing avro and snappy gives null values
    * [HIVE-3348] - semi-colon in comments in .q file does not work
    * [HIVE-3381] - Result of outer join is not valid
    * [HIVE-3384] - HIVE JDBC module won't compile under JDK1.7 as new methods added in JDBC specification
    * [HIVE-3403] - user should not specify mapjoin to perform sort-merge bucketed join
    * [HIVE-3428] - Fix log4j configuration errors when running hive on hadoop23
    * [HIVE-3446] - PrimitiveObjectInspector doesn't handle timestamps properly